--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "less": "^2.7.2",
     "less-loader": "^3.0.0",
     "style-loader": "^0.13.2",
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.3",
     "vue-template-compiler": "^2.2.1",
