remove 'react router' from package name

--- a/react-antd-starter/package.json
+++ b/react-antd-starter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-reactrouter-antd-starter",
+  "name": "react-antd-starter",
   "version": "0.1.0",
   "description": "",
   "scripts": {
