--- a/react-jest-starter/package.json
+++ b/react-jest-starter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-reactrouter-jest-starter",
+  "name": "react-jest-starter",
   "version": "0.1.0",
   "description": "",
   "scripts": {
