--- a/react-starter/package.json
+++ b/react-starter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-mobx-reactrouter-starter",
+  "name": "react-starter",
   "version": "0.1.0",
   "description": "",
   "scripts": {
@@ -10,16 +10,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "mobx": "^5.9.4",
-    "mobx-react": "^5.4.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
